# pqc-iot-retrofit-scanner

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_TERRAGON_COMPLETE.md  AUTONOMOUS_SDLC_v4_COMPLETION_REPORT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GENERATION5.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_COMPLETE.md  Dockerfile  GENERATION_3_COMPLETION_REPORT.md  GENERATION_6_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  GENERATION_COMPLETION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_SUMMARY.md  PROJECT_CHARTER.md  README.md  README_METRICS.md  SECURITY.md  autonomous_bug_discovery_system.py  autonomous_production_deployment.py  autonomous_quality_gates.py  autonomous_reliability_engine.py  benchmark-results.json  certification_automation_system.py  comprehensive_quality_gates.py  comprehensive_test_framework.py  (+51 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: automation-config.json  project-metrics.json
.terragon/: README.md  autonomous-executor.py  autonomous-value-executor.py  config.yaml  demo.py  pr_template.md  scheduler.py  terragon-sdlc-README.md  value-config.yaml  value-discovery.py  value-metrics.json
deployments/383ad661/: app_config.json  deployment_metadata.json  docker-compose.yml  health_check.sh
deployments/4af1eebe/: app_config.json  deployment_metadata.json  docker-compose.yml
deployments/aa6a161c/: app_config.json  deployment_metadata.json  docker-compose.yml
deployments/gen6_prod_1756213522898_02788c7ef58dadcc/: app_config.json  deployment_metadata.json  docker-compose.yml  health_check.sh
deployments/prod_1756337829_41ef494b/: Dockerfile
deployments/prod_1756337844_90228ca9/: app_config.json  deployment_report.json  docker-compose.yml  health_check.sh
docker/: Dockerfile
docs/: ARCHITECTURE.md  AUTONOMOUS_SDLC.md  DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-dilithium2-default.md  README.md  template.md
docs/deployment/: README.md
docs/guides/: README.md  migration-guide.md  quick-start.md
docs/monitoring/: README.md
docs/workflows/: MANUAL_SETUP_REQUIRED.md  README.md
docs/workflows/examples/: cd.yml  ci.yml  dependency-update.yml  release.yml  security-scan.yml
logs/: error_report.json
monitoring/: grafana-dashboard.json  health_check.py  otel_config.py  performance_config.py  prometheus_metrics.py  structured_logging.py
pqc_patches/: install_patches.sh  package_metadata.json  patch_000_dilithium2.c
reports/: quality_gate_report_1755866244.json  quality_gate_report_1756212868.json  quality_gate_report_1756213405.json  quality_gate_report_qg_1756337326.json  quality_gate_report_qg_1756337681.json  quality_gate_report_qg_1756337718.json
scripts/: benchmark-runner.py  build.sh  collect-metrics.py  health-monitor.py  project-metrics-dashboard.py  sdlc-health-check.py  setup-automation.sh  technical-debt-tracker.py
security/: SECURITY_CHECKLIST.md  THREAT_MODEL.md
src/pqc_iot_retrofit/: __init__.py  adaptive_ai.py  advanced_pqc_engine.py  auto_scaling.py  autonomous_research.py  binary_patcher.py  cli.py  cli_basic.py  cli_enhanced.py  cli_gen4.py  concurrency.py  config.py  distributed_computing.py  enterprise_scaling_engine.py  error_handling.py  generation6_quantum_security_research.py  global_compliance_engine.py  global_deployment.py  i18n.py  monitoring.py  optimized_scanner.py  patcher.py  performance.py  pqc_implementations.py  quantum_ml_analysis.py  quantum_resilience.py  realtime_security_orchestrator.py  reporting.py  research_breakthrough.py  resilience.py  resilient_processing.py  robust_logging.py  robust_scanner.py  robust_validation.py  scanner.py  security_enhanced.py  security_hardened.py  utils.py  validation.py
src/pqc_iot_retrofit/cache/: __init__.py  analysis_cache.py  cache_manager.py  firmware_cache.py
src/pqc_iot_retrofit/crypto/: __init__.py  dilithium.py  kyber.py
src/pqc_iot_retrofit/database/: __init__.py  connection.py  models.py  repositories.py
src/pqc_iot_retrofit/locales/: en.json
tests/: __init__.py  conftest.py  test_e2e_pqc_workflow.py  test_generation1_basic.py  test_generation3_integration.py  test_generation4_integration.py  test_scanner.py  test_security_validation.py
tests/benchmarks/: __init__.py  test_performance.py
tests/e2e/: __init__.py  test_cli_workflows.py
tests/fixtures/: __init__.py  firmware_samples.py
tests/integration/: __init__.py  test_firmware_analysis.py
tests/security/: __init__.py  test_side_channel_resistance.py
tests/unit/: test_binary_patcher.py  test_cache.py  test_database.py  test_pqc_implementations.py  test_scanner_unit.py
tests/utils/: __init__.py  test_helpers.py
