[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc-iot-retrofit-scanner"
version = "1.0.0"
description = "CLI tool that audits IoT firmware and code for quantum-vulnerable cryptography and recommends PQC replacements"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Schmidt"}
]
keywords = ["post-quantum", "cryptography", "pqc", "iot", "firmware", "security", "nist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Embedded Systems",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]

[project.scripts]
pqc-scan = "pqc_iot_retrofit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["src"]
